--- a/app/assets/stylesheets/components/project_list_item.css.scss
+++ b/app/assets/stylesheets/components/project_list_item.css.scss
@@ -25,7 +25,7 @@
     color: #666;
     font-size: 95%;
 
-    i[class^=fi-] {
+    .fa {
       margin-right: 0.5rem;
       margin-left: 0.5rem;
 
