--- a/app/views/common/_project_list_item.html.slim
+++ b/app/views/common/_project_list_item.html.slim
@@ -10,9 +10,9 @@
       p.description
         | #{project.oneword}
     p.info
-      i.fi-home
+      i.fa.fa-map-marker
       span.city
         = raw project_cities_link(project)
-      i.fi-list-thumbnails
+      i.fa.fa-tags
       span.category
         = raw project_categories_link(project)
