--- a/app/views/projects/_head.html.slim
+++ b/app/views/projects/_head.html.slim
@@ -19,6 +19,6 @@
         span
           = raw project_cities_link(@project)
       .category
-        i.fa.fa-list
+        i.fa.fa-tags
         span.category
           = raw project_categories_link(@project)
