--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -34,7 +34,7 @@
             span
               | {{ project.city }}
           .category
-            i.fa.fa-list
+            i.fa.fa-tags
             span.category
               | {{ industries_link(project.industries) }}
       .edit
