--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1124,8 +1124,8 @@ $secondary-color: #00C4A4;
 
 // $tabs-navigation-padding: rem-calc(16);
 $tabs-navigation-bg-color: #fff;
-$tabs-navigation-active-bg-color: #eee;
-// $tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -6%);
+$tabs-navigation-active-bg-color: #fcfcfc;
+$tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -1%);
 // $tabs-navigation-font-color: #222;
 // $tabs-navigation-active-font-color: $tabs-navigation-font-color;
 // $tabs-navigation-font-size: rem-calc(16);
