--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1092,7 +1092,7 @@ $secondary-color: #00C4A4;
 
 // These control the background color for the table and even rows
 // $table-bg: #fff;
-// $table-even-row-bg: #f9f9f9  ;
+$table-even-row-bg: #fcfcfc;
 
 // These control the table cell border style
 // $table-border-style: solid;
@@ -1100,7 +1100,7 @@ $secondary-color: #00C4A4;
 // $table-border-color: #ddd;
 
 // These control the table head styles
-// $table-head-bg: #f5f5f5  ;
+$table-head-bg: #fcfcfc;
 // $table-head-font-size: rem-calc(14);
 // $table-head-font-color: #222;
 // $table-head-font-weight: $font-weight-bold;
