--- a/app/assets/stylesheets/explore.css.scss
+++ b/app/assets/stylesheets/explore.css.scss
@@ -8,7 +8,7 @@
   .explore-head {
 
     .tabs {
-      background-color: #F2F3F4;
+      //background-color: #F4F4F4;
     }
     margin-bottom: 3rem;
     border-bottom: 1px solid #ddd;
