--- a/app/assets/stylesheets/components/invest.css.scss
+++ b/app/assets/stylesheets/components/invest.css.scss
@@ -9,8 +9,9 @@
     margin-bottom: 0.5rem;
   }
 
-  .box {
+  .content .box {
     padding: 1rem 1.5rem;
+    margin-bottom: 0;
 
     .sub-title {
       color: $primary-color;
@@ -24,7 +25,7 @@
     }
   }
 
-  .box2 {
+  .content .box2 {
     .sub-title, .sub-content {
       color: #00C4A3;
     }
