--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -18,7 +18,7 @@
     }
 
     p, .content {
-      padding: 0.5rem 1.625rem;
+      padding: 1.625rem 2.225rem;
     }
   }
 
@@ -111,5 +111,9 @@
     .progress-name.secondary {
       color: $secondary-color;
     }
+  }
+
+  .image {
+    margin-left: -0.625rem;
   }
 }
