--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -116,4 +116,25 @@
   .image {
     margin-left: -0.625rem;
   }
+  
+  .funs {
+
+    .text-wrapper {
+      text-align: center;
+      .text {
+        color: #999;
+        margin-right: 1rem;
+      }
+
+      .value {
+        color: $primary-color;
+      }
+      padding-bottom: 1rem;
+    }
+
+    img {
+      border-radius: 50%;
+    }
+
+  }
 }
