--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -5,6 +5,8 @@
     .small-12.medium-4.large-3.columns
       = render 'head'
       hr
+      = render 'fun'
+      hr
       /! JiaThis Button BEGIN
       .row
         .small-12.columns
