--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -5,9 +5,8 @@
         /*form ng-submit='submit()' ng-controller='HomeController'*/
         .row
           .small-12.large-8.columns
-            h2.heading  全国首家免费创业众筹平台
+            h2.heading  中国首个免费创业众筹平台
             h4.sub-heading 这里不光筹钱，还能筹人！
-            /*= link_to '申请内测', new_user_registration_path, class: 'button'*/
             = link_to '发布项目', new_project_path, class: 'button'
   .start-projects-content
     .row
