粉丝的手机版

--- a/app/assets/stylesheets/components/project_head.css.scss
+++ b/app/assets/stylesheets/components/project_head.css.scss
@@ -5,6 +5,11 @@
 
     .logo {
       width: 50%;
+
+      @media #{$small-only} {
+        width: 30%;
+      }
+
       margin: auto;
 
       img {
