--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -4,7 +4,7 @@
   .row
     .small-12.medium-4.large-3.columns
       = render 'head'
-      hr
+      hr.show-for-medium-up
       = render 'fun'
       hr
       /! JiaThis Button BEGIN
