beta 与内测标志

--- a/app/assets/stylesheets/components/header.css.scss
+++ b/app/assets/stylesheets/components/header.css.scss
@@ -11,6 +11,9 @@
   }
 
   .logo-wrapper {
+    @media #{$small-only} {
+      width: 50%;
+    }
     position: relative;
     display: inline-block;
 
