使用 png 替换 svg, 保持清晰度

--- a/app/assets/stylesheets/components/header.css.scss
+++ b/app/assets/stylesheets/components/header.css.scss
@@ -14,14 +14,18 @@
     @media #{$small-only} {
       width: 50%;
     }
-    position: relative;
     display: inline-block;
+
+    .logo-wrapper-inner {
+      display: inline-block;
+      position: relative;
+    }
 
     .bit {
       font-size: 0.5rem;
       position: absolute;
-      top: -16px;
-      right: -23px;
+      top: -17px;
+      right: -17px;
     }
   }
 
