融资状态手机版

--- a/app/assets/templates/directives/money_require.html.slim
+++ b/app/assets/templates/directives/money_require.html.slim
@@ -4,7 +4,7 @@
   p.no-invest-content ng-hide='require'
     | 当前暂无融资需求, 请关注
   .content
-    ul.small-block-grid-2.medium-block-grid-4 ng-show='require'
+    ul.small-block-grid-1.medium-block-grid-2.large-block-grid-4 ng-show='require'
       li
         .box
           .sub-title
