--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -35,7 +35,7 @@
             - if @project.screenshots.present?
               h5.title 产品介绍
               .content
-                ul.image.clearing-thumbs.small-block-grid-3 data-clearing=""
+                ul.image.clearing-thumbs.small-block-grid-1.medium-block-grid-3 data-clearing=""
                   - @project.screenshots.each do |s|
                     li
                       = link_to s.image.url do
